--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,1 +1,17 @@
 include(FetchContent)
+
+project_log("FetchContent: fmt")
+
+FetchContent_Declare(
+        fmt
+        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+        GIT_TAG 4a4a2a2bd6a712a1250a0777e74b0261f003043b
+)
+
+project_log("FetchContent: spdlog")
+FetchContent_Declare(
+        spdlog
+        GIT_REPOSITORY https://github.com/gabime/spdlog.git
+        GIT_TAG v1.11.0
+)
+FetchContent_MakeAvailable(spdlog)
