--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -1,5 +1,5 @@
 
 add_executable(xpapers main.cpp)
-target_link_libraries(xpapers PRIVATE utilities)
+target_link_libraries(xpapers PRIVATE utilities wallpaperEngine)
 
-prepare_executable(xpapers)
+prepare_executable(xpapers XPapers)
