--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(RenderEngine)
 add_subdirectory(WinEngine)
 add_subdirectory(WallpaperEngine)
+set (COMPONENT_LIST ${COMPONENT_LIST} PARENT_SCOPE)
