Add assert log & engine link x11

--- a/src/Engine/WinEngine/CMakeLists.txt
+++ b/src/Engine/WinEngine/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(WINDOW_ENGINE_HEADERS
+    engine.hpp
 )
 
 set(WINDOW_ENGINE_SOURCES
@@ -9,5 +10,13 @@ add_library(windowEngine ${WINDOW_ENGINE_HEADERS} ${WINDOW_ENGINE_SOURCES})
 make_component(windowEngine WindowEngine)
 target_include_directories(windowEngine PUBLIC ..)
 
-target_link_libraries(windowEngine utilities)
+find_package(X11 REQUIRED)
+
+project_log("X11_FOUND = ${X11_FOUND}")
+project_log("X11_INCLUDE_DIR = ${X11_INCLUDE_DIR}")
+project_log("X11_LIBRARIES = ${X11_LIBRARIES}")
+
+target_include_directories(windowEngine PRIVATE ${X11_INCLUDE_DIR})
+target_link_libraries(windowEngine PRIVATE ${X11_LIBRARIES} utilities)
+
 set (COMPONENT_LIST ${COMPONENT_LIST} PARENT_SCOPE)
