Add connector system

--- a/src/Engine/WallpaperEngine/CMakeLists.txt
+++ b/src/Engine/WallpaperEngine/CMakeLists.txt
@@ -3,13 +3,15 @@ set(WP_ENGINE_HEADERS
     Event.hpp
     Widget.hpp
     WallpaperEngine.hpp
-)
-
+    Connector.hpp
+    )
+    
 set(WP_ENGINE_SOURCES
     Background.cpp
     Event.cpp
     Widget.cpp
     WallpaperEngine.cpp
+    Connector.cpp
 )
 
 add_library(wallpaperEngine ${WP_ENGINE_HEADERS} ${WP_ENGINE_SOURCES})
