--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install xcb
       run: sudo apt install xcb
     - name: Install x11
-      run: sudo apt-get install libx11-dev
+      run: sudo apt-get install libx11-dev libxrandr-dev
     - name: Intall xmu
       run: sudo apt-get install libxmu-dev
 
