--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_executable(xpapers main.cpp)
-target_link_libraries(xpapers PRIVATE utilities wallpaperEngine)
+
+target_link_libraries(xpapers PUBLIC utilities wallpaperEngine)
 
 prepare_executable(xpapers XPapers)
