Multi-display support, monitor enumeration, xrandr added (#9)
* .test folder added

* event handler and var handler added

* c_str() replaced with data() to avoid const_cast

* milliseconds removed from log

* formatting settings added

* xmanager + xwindowhandler implemented

* old files removed

* fixes constexpr

* cpp files added, fixes

* prototypes added

* simple pair_impl class added

* full rework + mvp

* test added

* removed binary

* newlines added to avoid warnings

* fixes, now stable

* XManager renamed to XDisplayHandler

* cmake dependencies / headers added

* upair_t added

* multi-display support, displ and screen info

* testing

* xrandr added

* fixes, testing

* win test returned

* unnecessary throw's removed

--- a/src/Engine/WinEngine/CMakeLists.txt
+++ b/src/Engine/WinEngine/CMakeLists.txt
@@ -1,9 +1,15 @@
 set(WINDOW_ENGINE_HEADERS
+    WindowEngine.hpp
+    XDisplayHandler.hpp
+    XWindowHandler.hpp
+    proto.hpp
+    engine.hpp
 )
 
 set(WINDOW_ENGINE_SOURCES
     engine.cpp
-    XManager.cpp
+    WindowEngine.cpp
+    XDisplayHandler.cpp
     XWindowHandler.cpp
 )
 
@@ -13,9 +19,10 @@ target_include_directories(windowEngine PUBLIC ..)
 
 find_package(XCB REQUIRED)
 find_package(X11 REQUIRED)
+find_package(X11 REQUIRED COMPONENTS Xrandr)
 
 target_include_directories(windowEngine PUBLIC ${XCB_INCLUDE_DIR} ${X11_INCLUDE_DIR})
-target_link_libraries(windowEngine PUBLIC ${XCB_LIBRARIES} ${X11_LIBRARIES})
+target_link_libraries(windowEngine PUBLIC ${XCB_LIBRARIES} ${X11_LIBRARIES} X11::Xrandr)
 
 target_link_libraries(windowEngine PRIVATE utilities)
 
