--- a/src/Engine/WallpaperEngine/CMakeLists.txt
+++ b/src/Engine/WallpaperEngine/CMakeLists.txt
@@ -1,8 +1,17 @@
 set(WP_ENGINE_HEADERS
-)
-
+    Background.hpp
+    Event.hpp
+    Widget.hpp
+    WallpaperEngine.hpp
+    Connector.hpp
+    )
+    
 set(WP_ENGINE_SOURCES
-    engine.cpp
+    Background.cpp
+    Event.cpp
+    Widget.cpp
+    WallpaperEngine.cpp
+    Connector.cpp
 )
 
 add_library(wallpaperEngine ${WP_ENGINE_HEADERS} ${WP_ENGINE_SOURCES})
