--- a/src/Utilities/CMakeLists.txt
+++ b/src/Utilities/CMakeLists.txt
@@ -9,6 +9,10 @@ SET(UTILS_SOURCES
 )
 
 
+add_library(utilities_headers INTERFACE ${UTILS_HEADERS})
+target_include_directories(utilities_headers INTERFACE ..)
+target_include_directories(utilities_headers SYSTEM INTERFACE $<TARGET_PROPERTY:spdlog,INTERFACE_INCLUDE_DIRECTORIES>)
+
 add_library(utilities ${UTILS_HEADERS} ${UTILS_SOURCES})
 make_component(utilities Utils)
 target_include_directories(utilities PUBLIC ..)
