--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,13 +25,21 @@ jobs:
     
     - name: Install xcb
       run: sudo apt install xcb
+
     - name: Install x11
       run: sudo apt-get install libx11-dev libxrandr-dev
-    - name: Intall xmu
+
+    - name: Install xmu
       run: sudo apt-get install libxmu-dev
+
+    - name : Install glfw
+      run: sudo apt-get install libglfw3 libglfw3-dev
 
     - name: Install ecm
       run: sudo apt install extra-cmake-modules
+
+    - name: Install ffmpeg
+      run: sudo apt install ffmpeg
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
