--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_executable(xpapers main.cpp)
+add_executable(xpapers main.cpp Configurator.cpp)
 
 target_link_libraries(xpapers PUBLIC utilities wallpaperEngine)
 
