--- a/src/Plugins/Widget/CMakeLists.txt
+++ b/src/Plugins/Widget/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(Label)
 add_subdirectory(BaseWidgets)
+add_subdirectory(Movie)
 set (COMPONENT_LIST ${COMPONENT_LIST} PARENT_SCOPE)
